# whisper.cpp-openvino

./: .gitignore  OPENVINO_BUILD_README.md  README.md
.github/workflows/: bindings-go.yml  bindings-ruby.yml  build.yml  docker.yml  examples-wasm.yml  examples.yml  openvino-build.yml  openvino-build.yml.bak
examples/addon.node/: CMakeLists.txt  package-lock.json
scripts/: test-workflow-config.sh  validate-openvino-build.sh  validate-workflow-environment.sh
